--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 ul {
     list-style: none;
     padding-left: 0;
@@ -17,6 +21,37 @@ ul li.show i {
 }
 ul li i {
     font-size: 40px;
-    opacity: 0;
+    opacity: 1;
     transition: all 300ms ease;
+}
+
+.modal {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,0.9);
+    transition: all 300ms ease;
+}
+.modal .inner {
+    width: 50%;
+    margin: 30% auto;
+    padding: 2em;
+    text-align: center;
+    background: #fff;
+    box-shadow: 0px 0px 4px 1px #444;
+}
+.modal .inner h2 {
+    margin-bottom: 1em
+}
+.modal .inner p {
+    margin-bottom: 1em
+}
+.modal .inner button {
+    padding: 0.5em 3em;
+    border: 0;
+    background: #eee;
+    box-shadow: 1px 1px 5px 0px #ccc;
+    cursor: pointer;
 }
