--- a/css/app.css
+++ b/css/app.css
@@ -35,6 +35,7 @@ ul li i {
     width: 100%;
     height: 100%;
     background: rgba(255,255,255,0.9);
+    z-index: 99;
     transition: all 300ms ease;
 }
 .modal .inner {
