--- a/css/app.css
+++ b/css/app.css
@@ -54,19 +54,26 @@ ul li i {
     margin: 20% auto;
     padding: 2em;
     text-align: center;
-    background: #fff;
-    box-shadow: 0px 0px 4px 1px #444;
+    background: #fffc;
+    box-shadow: 0px 0px 4px 1px #d4d4d4b3;
 }
 .modal .inner h2 {
-    margin-bottom: 1em
+    font-size: 2.5em;
+    margin-bottom: 0.5em;
 }
 .modal .inner p {
-    margin-bottom: 1em
+    font-size: 1.4em;
 }
 .modal .inner button {
+    margin-top: 1.5em;
     padding: 0.5em 3em;
+    font-size: 1.1em;
     border: 0;
-    background: #eee;
+    background: #fff;
     box-shadow: 1px 1px 5px 0px #ccc;
     cursor: pointer;
+    transition: all 300ms ease;
+}
+.modal .inner button:hover {
+    box-shadow: none;
 }
