--- a/css/app.css
+++ b/css/app.css
@@ -6,34 +6,59 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
     font-family: 'Chicle', cursive;
 }
 .game-container {
-    text-align: center
+    text-align: center;
+    max-width: 1170px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 .game-container h1 {
     font-size: 4em;
     margin-bottom: 0.5em;
 }
-.game-container h2 {
+.game-container .features {
     font-size: 2em;
     margin-bottom: 0.5em;
+    display: flex;
 }
-ul {
+.game-container .features .moves-count,
+.game-container .features .repeat {
+    width: 50%;
+}
+.game-container .features .moves-count {
+    text-align: left;
+    padding-left: 1%;
+}
+.game-container .features .repeat {
+    text-align: right;
+    padding-right: 1%;
+}
+.game-container .features .repeat .play-again {
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+.game-container .features .repeat .play-again:hover {
+    transform: rotate(90deg);
+}
+.cards {
     list-style: none;
-    padding-left: 0;
+    padding-left: 0;    
+    display: flex;
+    flex-wrap: wrap
 }
-ul li {
+.cards li {
     display: inline-block;
-    width: 23%;
     margin: 1%;
-    height: 125px;
+    margin-bottom: 1vw;
+    width: 23%;
     line-height: 140px;
     text-align: center;
     background: #333;
     color: #eee;
 }
-ul li.show i {
+.cards li.show i {
     opacity: 1;
 }
-ul li i {
+.cards li i {
     font-size: 40px;
     opacity: 0;
     transition: all 300ms ease;
