--- a/css/app.css
+++ b/css/app.css
@@ -17,11 +17,13 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
     font-size: 2em;
     margin-bottom: 0.5em;
     display: flex; }
-    .game-container .features .moves-count, .game-container .features .repeat {
-      width: 50%; }
+    .game-container .features .moves-count, .game-container .features .stars-rating, .game-container .features .repeat {
+      width: calc(100%/3); }
     .game-container .features .moves-count {
       text-align: left;
       padding-left: 1%; }
+    .game-container .features .stars-rating .star {
+      color: #ffb400; }
     .game-container .features .repeat {
       text-align: right;
       padding-right: 1%; }
@@ -50,7 +52,7 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
       opacity: 1; }
     .cards li i {
       font-size: 25px;
-      opacity: 0;
+      opacity: 0.5;
       transition: all 300ms ease; }
   @media all and (min-width: 600px) {
     .cards li {
@@ -91,7 +93,8 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
       font-size: 2.5em;
       margin-bottom: 0.5em; }
     .modal .inner p {
-      font-size: 1.4em; }
+      font-size: 1.4em;
+      margin-bottom: 0.5em; }
     .modal .inner button {
       margin-top: 1.5em;
       padding: 0.5em 3em;
