--- a/css/app.sass
+++ b/css/app.sass
@@ -20,12 +20,16 @@ h1, h2, h3, h4, h5, h6, div, span, button, li
         margin-bottom: 0.5em
         display: flex
 
-        .moves-count, .repeat
-            width: 50%
+        .moves-count, .stars-rating, .repeat
+            width: calc(100%/3)
 
         .moves-count
             text-align: left
             padding-left: 1%
+
+        .stars-rating
+            .star
+                color: #ffb400
 
         .repeat
             text-align: right
@@ -60,7 +64,7 @@ h1, h2, h3, h4, h5, h6, div, span, button, li
 
         i
             font-size: 25px
-            opacity: 0
+            opacity: 0.5
             transition: all 300ms ease
 
     @media all and (min-width: 600px)
@@ -110,6 +114,7 @@ h1, h2, h3, h4, h5, h6, div, span, button, li
 
         p
             font-size: 1.4em
+            margin-bottom: 0.5em
 
         button
             margin-top: 1.5em
