Adjust the layout size between the Game Features

--- a/css/app.sass
+++ b/css/app.sass
@@ -20,13 +20,16 @@ h1, h2, h3, h4, h5, h6, div, span, button, li
         margin-bottom: 0.5em
         display: flex
 
-        .moves-count, .stars-rating, .repeat
-            width: calc(100%/3)
+        .moves-count, .timer-container, .stars-rating, .repeat
+            width: 25%
 
         .moves-count
             text-align: left
             padding-left: 1%
-
+        
+        .timer-container, .stars-rating
+            text-align: center
+            
         .stars-rating
             .star
                 color: #ffb400
