--- a/css/app.css
+++ b/css/app.css
@@ -17,11 +17,13 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
     font-size: 2em;
     margin-bottom: 0.5em;
     display: flex; }
-    .game-container .features .moves-count, .game-container .features .stars-rating, .game-container .features .repeat {
-      width: calc(100%/3); }
+    .game-container .features .moves-count, .game-container .features .timer-container, .game-container .features .stars-rating, .game-container .features .repeat {
+      width: 25%; }
     .game-container .features .moves-count {
       text-align: left;
       padding-left: 1%; }
+    .game-container .features .timer-container, .game-container .features .stars-rating {
+      text-align: center; }
     .game-container .features .stars-rating .star {
       color: #ffb400; }
     .game-container .features .repeat {
