bug: Fix selecting the matched card
After click on 2 matched cards, the user was able to click on any of them and try to match it with another one.
This bug has been fixed.

Now, the matched cards cannot be clicked again!

--- a/css/app.css
+++ b/css/app.css
@@ -50,6 +50,8 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
     text-align: center;
     background: #333;
     color: #eee; }
+    .cards li.disabled {
+      pointer-events: none; }
     .cards li.show i {
       opacity: 1; }
     .cards li i {
