--- a/css/app.sass
+++ b/css/app.sass
@@ -62,6 +62,9 @@ h1, h2, h3, h4, h5, h6, div, span, button, li
         background: #333
         color: #eee
 
+        &.disabled
+            pointer-events: none
+
         &.show i
             opacity: 1
 
