ui-ux: Add 'matched' class

--- a/css/app.sass
+++ b/css/app.sass
@@ -67,6 +67,9 @@ h1, h2, h3, h4, h5, h6, div, span, button, li
 
         &.show i
             opacity: 1
+        
+        &.matched
+            background: green
 
         i
             font-size: 25px
