--- a/css/app.css
+++ b/css/app.css
@@ -54,6 +54,8 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
       pointer-events: none; }
     .cards li.show i {
       opacity: 1; }
+    .cards li.matched {
+      background: green; }
     .cards li i {
       font-size: 25px;
       opacity: 0;
