--- a/css/app.css
+++ b/css/app.css
@@ -38,8 +38,7 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
 .cards {
   list-style: none;
   padding-left: 0;
-  display: flex;
-  flex-wrap: wrap; }
+  margin: 0 auto; }
   .cards li {
     display: inline-block;
     margin: 1%;
@@ -60,24 +59,6 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
       font-size: 25px;
       opacity: 0;
       transition: all 300ms ease; }
-  @media all and (min-width: 600px) {
-    .cards li {
-      height: 100px;
-      line-height: 110px; }
-      .cards li i {
-        font-size: 30px; } }
-  @media all and (min-width: 750px) {
-    .cards li {
-      height: 140px;
-      line-height: 160px; }
-      .cards li i {
-        font-size: 40px; } }
-  @media all and (min-width: 1000px) {
-    .cards li {
-      height: 175px;
-      line-height: 200px; }
-      .cards li i {
-        font-size: 50px; } }
 
 .modal {
   position: absolute;
@@ -112,5 +93,27 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
       transition: all 300ms ease; }
       .modal .inner button:hover {
         box-shadow: none; }
+
+/* Responsive */
+@media all and (min-width: 600px) {
+  .cards {
+    width: 500px; }
+    .cards li {
+      height: 100px;
+      line-height: 120px; }
+      .cards li i {
+        font-size: 30px; } }
+@media all and (min-width: 750px) {
+  .cards {
+    width: 650px; }
+    .cards li {
+      height: 140px;
+      line-height: 160px; }
+      .cards li i {
+        font-size: 40px; } }
+@media all and (min-width: 1000px) {
+  .cards li {
+    height: 140px;
+    line-height: 160px; } }
 
 /*# sourceMappingURL=app.css.map */
