--- a/css/app.sass
+++ b/css/app.sass
@@ -48,9 +48,7 @@ h1, h2, h3, h4, h5, h6, div, span, button, li
 .cards
     list-style: none
     padding-left: 0
-    display: flex
-    flex-wrap: wrap
-
+    margin: 0 auto
     li
         display: inline-block
         margin: 1%
@@ -75,29 +73,6 @@ h1, h2, h3, h4, h5, h6, div, span, button, li
             font-size: 25px
             opacity: 0
             transition: all 300ms ease
-
-    @media all and (min-width: 600px)
-        li
-            height: 100px
-            line-height: 110px
-
-            i
-                font-size: 30px
-
-    @media all and (min-width: 750px)
-        li
-            height: 140px
-            line-height: 160px
-
-            i
-                font-size: 40px
-    @media all and (min-width: 1000px)
-        li
-            height: 175px
-            line-height: 200px
-
-            i
-                font-size: 50px
 
 .modal
     position: absolute
@@ -137,3 +112,32 @@ h1, h2, h3, h4, h5, h6, div, span, button, li
 
             &:hover
                 box-shadow: none
+
+
+/* Responsive */
+@media all and (min-width: 600px)
+    .cards
+        width: 500px
+
+        li
+            height: 100px
+            line-height: 120px
+
+            i
+                font-size: 30px
+
+@media all and (min-width: 750px)
+    .cards
+        width: 650px
+
+        li
+            height: 140px
+            line-height: 160px
+
+            i
+                font-size: 40px
+@media all and (min-width: 1000px)
+    .cards
+        li
+            height: 140px
+            line-height: 160px
