--- a/css/app.css
+++ b/css/app.css
@@ -11,29 +11,26 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
   padding: 0 15px;
   margin: 0 auto; }
   .game-container h1 {
-    font-size: 4em;
-    margin-bottom: 0.5em; }
+    font-size: 3rem;
+    margin: 1rem 0; }
   .game-container .features {
-    font-size: 2em;
-    margin-bottom: 0.5em;
-    display: flex; }
+    font-size: 1.7rem;
+    margin-bottom: 0.5rem;
+    display: flex;
+    flex-wrap: wrap; }
     .game-container .features .moves-count, .game-container .features .timer-container, .game-container .features .stars-rating, .game-container .features .repeat {
-      width: 25%; }
-    .game-container .features .moves-count {
-      text-align: left;
-      padding-left: 1%; }
+      width: 50%;
+      margin-bottom: 1rem;
+      text-align: center; }
     .game-container .features .timer-container, .game-container .features .stars-rating {
       text-align: center; }
     .game-container .features .stars-rating .star {
       color: #ffb400; }
-    .game-container .features .repeat {
-      text-align: right;
-      padding-right: 1%; }
-      .game-container .features .repeat .play-again {
-        cursor: pointer;
-        transition: all 300ms ease; }
-        .game-container .features .repeat .play-again:hover {
-          transform: rotate(90deg); }
+    .game-container .features .repeat .play-again {
+      cursor: pointer;
+      transition: all 300ms ease; }
+      .game-container .features .repeat .play-again:hover {
+        transform: rotate(90deg); }
 
 .cards {
   list-style: none;
@@ -104,6 +101,11 @@ h1, h2, h3, h4, h5, h6, div, span, button, li {
       .cards li i {
         font-size: 30px; } }
 @media all and (min-width: 750px) {
+  .game-container h1 {
+    font-size: 3.5rem; }
+  .game-container .features {
+    font-size: 2rem; }
+
   .cards {
     width: 650px; }
     .cards li {
